--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "../../.eslintrc",
+  "extends": "../.eslintrc",
   "rules": {
     "max-nested-callbacks": 0,
     "no-unused-expressions": 0,
